--- a/follow.html
+++ b/follow.html
@@ -11,21 +11,13 @@
 <body>
     <div>
         <h1>your Follower</h1>
-        <ul>
-            <div>
-                <li>follower</li>
-                <button>follow/unfollow</button>
-            </div>
-            <div>
-                <li>follower</li>
-                <button>follow/unfollow</button>
-            </div>
-            <div>
-                <li>follower</li>
-                <button>follow/unfollow</button>
-            </div>
+        <ul id="list">
+           
         </ul>
     </div>
+    <span id="status"></span>
+    <script src="src/baseurl.js"></script>
+    <script src="src/follows.js"></script>
 </body>
 
 </html>
