--- a/login.html
+++ b/login.html
@@ -56,6 +56,7 @@
         </div>
     </form>
 </div>
+<span id="status"></span>
     <!--<div>
         <label for="staySignedIn">stay signed in</label>
         <input type="checkbox">
