--- a/profile.html
+++ b/profile.html
@@ -4,9 +4,18 @@
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>your profile</title>
+    <title>Your profile</title>
 </head>
 <body>
-    
+    <input id="username" type="text" placeholder="Username">
+    <input id="fullname" type="text" placeholder="Name">
+    <input id="studiengang" type="text" placeholder="Studiengang">
+    <input id="semester" type="text" placeholder="Semester">
+    <input id="password" type="text" placeholder="Neues Passwort">
+    <input id="password_repeat" type="text" placeholder="Neues Passwort wiederholen">
+    <button id="save-profile">Profil speichern</button>
+    <span id="status"></span>
+    <script src="src/baseurl.js"></script>
+   <script src="src/profile.js"></script>
 </body>
 </html>
