--- a/follow.html
+++ b/follow.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <a href="main.html"><button id="main-btn">Hauptseite</button></a>
     <div>
         <h1>your Follower</h1>
         <ul id="list">
