--- a/profile.html
+++ b/profile.html
@@ -7,6 +7,7 @@
     <title>Your profile</title>
 </head>
 <body>
+    <a href="main.html"><button id="main-btn">Hauptseite</button></a>
     <input id="username" type="text" placeholder="Username">
     <input id="fullname" type="text" placeholder="Name">
     <input id="studiengang" type="text" placeholder="Studiengang">
