--- a/login.html
+++ b/login.html
@@ -27,7 +27,7 @@
             </form>
         </div>
     </div>
-    <div>
+    <div class="box">
         <h1>Registrierung</h1>
         <form>
             <div>
