--- a/login.html
+++ b/login.html
@@ -12,13 +12,13 @@
     <div class="flexbox">
         <div class="box links">
             <h1>Login</h1>
-            <form action="">
-                <div>
+            <form action="" id="loginForm">
+                <div class="username">
                     <label for="username">Username</label>
                     <input type="text" name="username" id="username">
                 </div>
                 <div>
-                    <label for="password">Password</label>
+                    <label for="password">Passwort</label>
                     <input type="password" name="password" id="password">
                 </div>
                 <div>
@@ -26,38 +26,39 @@
                 </div>
             </form>
         </div>
-    </div>
-    <div class="box">
-        <h1>Registrierung</h1>
-        <form>
-            <div>
-                <label for="register-username">Username</label>
-                <input type="text" name="register-username" id="register-username">
-            </div>
-            <div>
-                <label for="register-password">Passwort</label>
-                <input type="password" name="register-password" id="register-password">
-            </div>
-            <div>
-                <label for="password-repeat">Passwort wiederholen</label>
-                <input type="password" name="password-repeat" id="password-repeat">
-            </div>
-            <div>
-                <label for="fullname">Name, Vorname</label>
-                <input type="text" name="fullname" id="fullname">
-            </div>
-            <div>
-                <label for="semester">Semester</label>
-                <input type="text" name="semester" id="semester">
-            </div>
-            <div>
-                <label for="studiengang">Studiengang</label>
-                <input type="text" name="studiengang" id="studiengang">
-            </div>
-            <div>
-                <button id="register-btn" type="submit">Registrieren</button>
-            </div>
-        </form>
+
+        <div class="box">
+            <h1>Registrierung</h1>
+            <form>
+                <div>
+                    <label for="register-username">Username</label>
+                    <input type="text" name="register-username" id="register-username">
+                </div>
+                <div>
+                    <label for="register-password">Passwort</label>
+                    <input type="password" name="register-password" id="register-password">
+                </div>
+                <div>
+                    <label for="password-repeat">Passwort wiederholen</label>
+                    <input type="password" name="password-repeat" id="password-repeat">
+                </div>
+                <div>
+                    <label for="fullname">Name, Vorname</label>
+                    <input type="text" name="fullname" id="fullname">
+                </div>
+                <div>
+                    <label for="semester">Semester</label>
+                    <input type="text" name="semester" id="semester">
+                </div>
+                <div>
+                    <label for="studiengang">Studiengang</label>
+                    <input type="text" name="studiengang" id="studiengang">
+                </div>
+                <div>
+                    <button id="register-btn" type="submit">Registrieren</button>
+                </div>
+            </form>
+        </div>
     </div>
     <span id="status"></span>
     <!--<div>
