--- a/login.html
+++ b/login.html
@@ -11,15 +11,15 @@
 <body>
     <div class="flexbox">
         <div class="box links">
-            <h1>Login</h1>
+            <h2>Login</h2>
             <form action="" id="loginForm">
                 <div class="username">
                     <label for="username">Username</label>
-                    <input type="text" name="username" id="username">
+                    <input type="text" name="username" id="username" class="input-login">
                 </div>
                 <div>
                     <label for="password">Passwort</label>
-                    <input type="password" name="password" id="password">
+                    <input type="password" name="password" id="password" class="input-login">
                 </div>
                 <div>
                     <button id="login-btn" type="submit">Login</button>
@@ -28,31 +28,31 @@
         </div>
 
         <div class="box">
-            <h1>Registrierung</h1>
+            <h2>Registrierung</h2>
             <form>
                 <div>
                     <label for="register-username">Username</label>
-                    <input type="text" name="register-username" id="register-username">
+                    <input type="text" name="register-username" id="register-username" class="input-login">
                 </div>
                 <div>
                     <label for="register-password">Passwort</label>
-                    <input type="password" name="register-password" id="register-password">
+                    <input type="password" name="register-password" id="register-password" class="input-login">
                 </div>
                 <div>
                     <label for="password-repeat">Passwort wiederholen</label>
-                    <input type="password" name="password-repeat" id="password-repeat">
+                    <input type="password" name="password-repeat" id="password-repeat" class="input-login">
                 </div>
                 <div>
                     <label for="fullname">Name, Vorname</label>
-                    <input type="text" name="fullname" id="fullname">
+                    <input type="text" name="fullname" id="fullname" class="input-login">
                 </div>
                 <div>
                     <label for="semester">Semester</label>
-                    <input type="text" name="semester" id="semester">
+                    <input type="text" name="semester" id="semester" class="input-login">
                 </div>
                 <div>
                     <label for="studiengang">Studiengang</label>
-                    <input type="text" name="studiengang" id="studiengang">
+                    <input type="text" name="studiengang" id="studiengang" class="input-login">
                 </div>
                 <div>
                     <button id="register-btn" type="submit">Registrieren</button>
