--- a/profile.html
+++ b/profile.html
@@ -11,19 +11,20 @@
 <body>
     <nav>
         <ul class="a">
-            <li><a href="main.html"><button id="main-btn">Hauptseite</button></a></li>
+            <li><a href="main.html"><button id="main-btn" class="nav-btn">Hauptseite</button></a></li>
         </ul>
     </nav>
+    <h1>Dein Profil</h1>
     <div class="flexbox">
         <div class="box">
-            <h1>Hier kannst du deine Daten ändern</h1>
+            <h2>Hier kannst du deine Daten ändern</h2>
 
-            <input id="username" type="text" placeholder="Username">
-            <input id="fullname" type="text" placeholder="Name">
-            <input id="studiengang" type="text" placeholder="Studiengang">
-            <input id="semester" type="text" placeholder="Semester">
-            <input id="password" type="text" placeholder="Neues Passwort">
-            <input id="password_repeat" type="text" placeholder="Neues Passwort wiederholen">
+            <input id="username" class="inputProfil" type="text" placeholder="Username">
+            <input id="fullname" class="inputProfil" type="text" placeholder="Name">
+            <input id="studiengang" class="inputProfil" type="text" placeholder="Studiengang">
+            <input id="semester" class="inputProfil" type="text" placeholder="Semester">
+            <input id="password" class="inputProfil" type="text" placeholder="Neues Passwort">
+            <input id="password_repeat" class="inputProfil" type="text" placeholder="Neues Passwort wiederholen">
             <button id="save-profile">Profil speichern</button>
             <span id="status"></span>
             
